tryCatch, type userRole, improve errors & validators
