# src/app/controller/UserController.ts
@@ -1,11 +1,12 @@
 import { Request, Response } from "express";
-import { RestError } from "../../utils/error";
 import { BaseController, Route } from "./BaseController";
 import { UserUseCase } from "../../domain/usecase/UserUseCase";
 import { RegisterRequest } from "./request/RegisterRequest";
 import { LoginRequest } from "./request/LoginRequest";
 import { SessionMiddleware } from "../middleware/SessionMiddleware";
-import { User } from "../../domain/entity/User";
+import { tryCatch } from "../../utils/tryCatch";
+import { HttpStatusCode, RestError } from "../../utils/error";
+import { UserRequest } from "./request/UserRequest";
 
 enum Routes {
     GET = "/",
@@ -32,119 +33,96 @@ export class UserController extends BaseController {
                 method: "get",
                 route: Routes.GET,
                 middlewares: [this.sessionMiddleware.isLogged],
-                execute: this.getUser,
+                execute: tryCatch(this.getUser),
             },
             {
                 method: "post",
                 route: Routes.SEED,
                 middlewares: [],
-                execute: this.createSeed,
+                execute: tryCatch(this.createSeed),
             },
             {
                 method: "post",
                 route: Routes.REGISTER,
                 middlewares: [],
-                execute: this.register,
+                execute: tryCatch(this.register),
             },
             {
                 method: "post",
                 route: Routes.LOGIN,
                 middlewares: [],
-                execute: this.login,
+                execute: tryCatch(this.login),
             },
             {
                 method: "post",
                 route: Routes.LOGOUT,
                 middlewares: [this.sessionMiddleware.isLogged],
-                execute: this.logout,
+                execute: tryCatch(this.logout),
             },
         ];
     }
 
     /**
-     * GET BY ID OR USERNAME
+     * GET BY ID OR NAME
      */
+
     private getUser = async (req: Request, res: Response) => {
-        try {
-            const { id, username } = req.query;
-            let user = null;
-            if (id) user = await this.userUseCase.findById(id.toString());
-            else if (username) user = await this.userUseCase.findByUsername(username.toString());
-            if (user) res.json({ user: user });
-            else res.status(400).json({ status: 400, message: "Username or id must be present" });
-        } catch (err) {
-            return RestError.manageServerError(res, err);
-        }
+        const { id, name } = new UserRequest(req);
+        let user = null;
+        if (id) user = await this.userUseCase.findById(id);
+        else if (name) user = await this.userUseCase.findByName(name);
+        res.json({ user: user });
     };
 
     /**
      * Register user
      */
     private register = async (req: Request, res: Response) => {
-        try {
-            const registerRequest = new RegisterRequest(req);
-            await this.userUseCase.changePassword(registerRequest.email, registerRequest.newPassword);
-            const user: User = await this.userUseCase.findByEmail(registerRequest.email);
-            const token = this.sessionMiddleware.getAuthorizationToken(res, user);
-            res.json({
-                status: "ok",
-                user: user,
-                token: token,
-            });
-        } catch (err) {
-            return RestError.manageServerError(res, err);
-        }
+        const { email, newPassword } = new RegisterRequest(req);
+        const user = await this.userUseCase.findByEmail(email);
+        await this.userUseCase.changePassword(user.id, newPassword);
+        const token = this.sessionMiddleware.getAuthorizationToken(res, user);
+        res.json({
+            user: user,
+            token: token,
+        });
     };
 
     /**
-     * Register user
+     * Login user
      */
     private login = async (req: Request, res: Response) => {
-        try {
-            const loginRequest = new LoginRequest(req);
-            const matches = await this.userUseCase.checkUserMatchPassword(loginRequest.email, loginRequest.password);
-            if (matches) {
-                const user: User = await this.userUseCase.findByEmail(loginRequest.email);
-                const token = this.sessionMiddleware.getAuthorizationToken(res, user);
-                res.json({
-                    status: "ok",
-                    user: user,
-                    token: token,
-                });
-            } else {
-                return RestError.manageServerError(res, new RestError("Invalid username or password", 400));
-            }
-        } catch (err) {
-            return RestError.manageServerError(res, err);
+        const { email, password } = new LoginRequest(req);
+        const matches = await this.userUseCase.checkUserMatchPassword(email, password);
+        if (matches) {
+            const user = await this.userUseCase.findByEmail(email);
+            const token = this.sessionMiddleware.getAuthorizationToken(res, user);
+            res.json({
+                user: user,
+                token: token,
+            });
+        } else {
+            throw new RestError("Invalid name or password", HttpStatusCode.BAD_REQUEST);
         }
     };
 
     /**
      * GET: LOGOUT
      */
-    private logout = async (req: Request, res: Response) => {
-        try {
-            this.sessionMiddleware.logout(res);
-            res.json({
-                status: "ok",
-            });
-        } catch (err) {
-            return RestError.manageServerError(res, err);
-        }
+    private logout = (req: Request, res: Response) => {
+        this.sessionMiddleware.logout(res);
+        res.json({
+            status: "ok",
+        });
     };
 
     /**
      * CREATE SEED
      */
-    private createSeed = async (req: Request, res: Response) => {
-        try {
-            await this.userUseCase.seed();
-            res.json({
-                status: "ok",
-            });
-        } catch (err) {
-            return RestError.manageServerError(res, err);
-        }
+    private createSeed = (req: Request, res: Response) => {
+        this.userUseCase.seed();
+        res.json({
+            status: "ok",
+        });
     };
-
 }
